# CrossSpeciesViewerPlugin

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
src/: CrossSpeciesSharedSettingsPlugin.cpp  CrossSpeciesSharedSettingsPlugin.h  CrossSpeciesSharedSettingsPlugin.json  CrossSpeciesViewerPlugin.cpp  CrossSpeciesViewerPlugin.h  CrossSpeciesViewerPlugin.json  SelectedDatasetsAction.cpp  SettingsAction.h  SharedSettingsAction.cpp  SharedSettingsAction.h
